nanite enabled babyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,15 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 
+r.Nanite.AllowTessellation=1
+r.Nanite.Tessellation=1
+r.MobileHDR=False
+RedChromaticityCoordinate=(X=0.713000,Y=0.293000)
+GreenChromaticityCoordinate=(X=0.165000,Y=0.830000)
+BlueChromaticityCoordinate=(X=0.128000,Y=0.044000)
+WhiteChromaticityCoordinate=(X=0.321680,Y=0.337670)
+WorkingColorSpaceChoice=ACESAP1
+
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 -D3D12TargetedShaderFormats=PCD3D_SM5
