--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,17 @@ GameName=Marxi_Project
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/1km_openworld_v001.1km_openworld_v001
-GameDefaultMap=/Game/Level/1km_openworld_v001.1km_openworld_v001
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Level/1km_openworld_v001.1km_openworld_v001
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/PlayerCharacter/BP_Marxi_OpenWorldMode.BP_Marxi_OpenWorldMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
