--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Items_And_Inventory/GameInstanceCustom.GameInstanceCustom_C
 GameDefaultMap=/Game/Level/1km_openworld_v001.1km_openworld_v001
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/PlayerCharacter/BP_Marxi_OpenWorldMode.BP_Marxi_OpenWorldMode_C
